feat ⛄️: Add vue meta to specify page titles - Update eslint to change the default settings from essential to recommended - Add fixes to capitalize first letter of elements automatically - Add vuetify translations for english and spanish - Refactor components to use system translation
Refs #2z4e7n

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,40 @@
 {
+  "$vuetify": {
+    "timePicker": {
+      "am": "AM",
+      "pm": "PM"
+    },
+    "datePicker": {
+      "prevMonthAriaLabel": "Previous",
+      "nextMonthAriaLabel": "Next"
+    },
+    "dataIterator": {
+      "noResultsText": "No results available",
+      "loadingText": "Loading..."
+    },
+    "noDataText": "No data available",
+    "dataTable": {
+      "itemsPerPageText": "Rows per page:",
+      "ariaLabel": {
+        "sortDescending": "Sorted descending.",
+        "sortAscending": "Sorted ascending.",
+        "sortNone": "Not sorted.",
+        "activateNone": "Activate to remove sorting.",
+        "activateDescending": "Activate to sort descending.",
+        "activateAscending": "Activate to sort ascending."
+      },
+      "sortBy": "Sort by"
+    },
+    "dataFooter": {
+      "itemsPerPageText": "Items per page:",
+      "itemsPerPageAll": "All",
+      "nextPage": "Next page",
+      "prevPage": "Previous page",
+      "firstPage": "First page",
+      "lastPage": "Last page",
+      "pageText": "{0}-{1} of {2}"
+    }
+  },
   "emotions_wheel": "emotions wheel",
   "settings": "settings",
   "about": "about",
