feat ⛄️: Implement language selector - Add english and spanish words to internationalization
Refs #2z4e7n

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -39,5 +39,7 @@
   "settings": "settings",
   "about": "about",
   "dark_mode": "dark mode",
-  "language": "language"
+  "language": "language",
+  "english": "english",
+  "spanish": "spanish"
 }
