feat ⛄️: Update sunburst labels to white - Add missing translation
Refs #2z4e7n

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -41,5 +41,6 @@
   "dark_mode": "dark mode",
   "language": "language",
   "english": "english",
-  "spanish": "spanish"
+  "spanish": "spanish",
+  "hover_emotion": "Hover an emotion"
 }
