--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -41,5 +41,6 @@
   "dark_mode": "modo oscuro",
   "language": "lenguaje",
   "english": "inglés",
-  "spanish": "español"
+  "spanish": "español",
+  "hover_emotion": "Mueve el cursor sobre una emoción"
 }
